--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@
   font-family: "Sans";
   src: url("../../public/fontes/Open_Sans/OpenSans.ttf");
 }
+@font-face {
+  font-family: "Inter";
+  src: url("../../public/fontes/Inter-VariableFont_slnt\,wght.ttf");
+}
 :root {
   font-family:"Sans", "Nunito";
   line-height: 1.5;
@@ -30,6 +34,7 @@
 a {
   color: var(--text-color);
   text-decoration: none;
+  font-weight: 700;
 }
 a:hover {
   color: #535bf2;
@@ -60,9 +65,6 @@ button {
   background-color: var(--text-color);
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: var(--secondary-color);
 }
 button:focus,
 button:focus-visible {
