--- a/src/components/aboutMe/styles.aboutMe.css
+++ b/src/components/aboutMe/styles.aboutMe.css
@@ -4,6 +4,7 @@
     width: 100%;
     background-color: var(--bg-color);
     flex: 3;
+    padding: 100px 0;
 }
 .leftContainer{
     background-color: var(--bg-color);
@@ -14,7 +15,6 @@
     flex-direction: column;
     flex-shrink: 0;
     margin-left: 10%;
-
 }
 #aboutMe{
     color: var(--secondary-color);
