--- a/src/components/myProjects/styles.projects.css
+++ b/src/components/myProjects/styles.projects.css
@@ -3,14 +3,12 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 400px;
+  height: 500px;
   background-color: var(--bg-color);
 }
-  
   #projectTitle {
     color: var(--secondary-color);
   }
-  
   .upperWrap {
     display: flex;
     align-items: center; 
@@ -36,4 +34,8 @@
 .mui-card{
   margin: 20px;
   width: 200px;
+}
+a :hover{
+  color: var(--secondary-color);
+  text-decoration: none;
 }
