--- a/src/components/contacts/styles.module.css
+++ b/src/components/contacts/styles.module.css
@@ -25,7 +25,7 @@
   }
   .socialMedia{
     font-size: 25px;
-    width: 35%;
+    width: 8em;
     height: 50px;
     border-radius: 20px;
     background-color: var(--primary-color);
@@ -43,4 +43,22 @@
   }
   .contactTitle{
     color: var(--secondary-color);
+  }
+  
+  @media screen and (max-width: 800px) {
+    .divWrapper{
+      flex-direction: column;
+      height: fit-content;
+    }
+    .rightWrap{
+      margin: auto;
+      width: fit-content;
+      height: fit-content;
+    }
+    .leftWrap{
+      align-items: center;
+      text-align: center;
+      margin: 10% auto;
+      height: fit-content;
+    }
   }
