--- a/src/components/contacts/styles.module.css
+++ b/src/components/contacts/styles.module.css
@@ -47,7 +47,7 @@
   
   @media screen and (max-width: 800px) {
     .divWrapper{
-      flex-direction: column;
+      flex-direction: column-reverse;
       height: fit-content;
     }
     .rightWrap{
@@ -60,5 +60,6 @@
       text-align: center;
       margin: 10% auto;
       height: fit-content;
+      width: 80%;
     }
   }
