chore(myProjects/icons)trying to align the items to the left side

--- a/src/components/myProjects/styles.module.css
+++ b/src/components/myProjects/styles.module.css
@@ -34,6 +34,7 @@
     fill: var(--primary-color);
   }
   .techIcons{
+    margin: 0px auto;
     padding: 0px 3px;
     color: var(--primary-color);
     fill: var(--primary-color);
