--- a/src/components/myProjects/styles.module.css
+++ b/src/components/myProjects/styles.module.css
@@ -25,16 +25,7 @@
     box-sizing: border-box;
     text-align: center;
   }
-  .iconsWrapper{
-    display: flex;
-    align-items: center;
-    margin: 0px auto;
-    font-size: 12px;
-    color: var(--primary-color);
-    fill: var(--primary-color);
-  }
   .techIcons{
-    margin: 0px auto;
     padding: 0px 3px;
     color: var(--primary-color);
     fill: var(--primary-color);
@@ -48,13 +39,13 @@
   background-color: transparent;
 }
 .cardContent{
+  justify-content: space-between;
   display: flex;
   align-items: center;
   height: 5px;
   background-color: #333333;
   color: var(--primary-color);
-  margin: auto;
-  width: 100%;
+  width: 90%;
   font-size: 20px;
 }
 @media screen and (max-width: 1000px) {
