feature(metadata)adding metadata on layout.tsx as well as robots.ts and sitemap.ts

--- a/src/components/contacts/styles.module.css
+++ b/src/components/contacts/styles.module.css
@@ -19,7 +19,7 @@
     height: 200px;
     display: flex;
     align-items: center;
-    background-image: url("/images/iconContacts.webp");
+    background-image: url("/images/me.webp");
     background-size: contain;
     border-radius: 200px;
   }
