chore(header)header buttons now have an anchor link and work properly

--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -57,6 +57,9 @@
   font-weight: 600;
   font-size: 30px;
 }
+.lang{
+  display: flex;
+}
 @media screen and (max-width: 1200px) {
   .section{
       top: 38%;
