--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior: smooth;
+}
 @font-face {
   font-family: "Nunito";
   src: url("../../public/fontes/Nunito/Nunito-VariableFont_wght.ttf");
