--- a/src/components/contacts/styles.module.css
+++ b/src/components/contacts/styles.module.css
@@ -22,6 +22,7 @@
     background-image: url("/images/me.webp");
     background-size: contain;
     border-radius: 200px;
+    border: 2px solid var(--secondary-color);
   }
   .socialMedia{
     font-size: 25px;
@@ -57,6 +58,15 @@
       width: fit-content;
       height: fit-content;
     }
+    .leftWrap{
+      align-items: center;
+      text-align: center;
+      margin: 10% auto;
+      height: fit-content;
+      width: 80%;
+    }
+  }
+  @media screen and (max-width: 550px) {
     .leftWrap{
       align-items: center;
       text-align: center;
