--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   position:relative;
-  background: url("/images/backgroundimage.png"), rgba(211, 211, 211, 0) 50% / cover no-repeat ;
+  background: url("/images/backgroundimage.webp"), rgba(211, 211, 211, 0) 50% / cover no-repeat ;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -36,7 +36,7 @@
   align-content: center;
   align-items: center;
   position: absolute;
-  top: 30%;
+  top: 33%;
   left: 15%;
   font-size: 1.5em;
   font-family:"Inter";
@@ -49,18 +49,18 @@
   color: var(--secondary-color);
   padding: 0;
   padding: .2em 1em;
-  background-color: white;
   margin-left: 3rem;
+  text-decoration: underline;
 }
 .name{
   font-weight: 600;
-  font-size: 30px;
+  font-size: 35px;
 }
 .stack{
   color: var(--secondary-color);
 }
 .animation{
-  font-size: 20px;
+  font-size: 35px;
   opacity: 0;
   transform: translateY(20px);
   animation: fadeInUp 2s forwards;
@@ -97,6 +97,12 @@
 @media screen and (max-width: 800px) {
   .logo{
       display: none;
+  }
+  .animation{
+    font-size:20px;
+  }
+  .name{
+    font-size: 25px;
   }
   .header{
     width: 100%;
