--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ html{
   -webkit-text-size-adjust: 100%;
 
   --black-color: #000;
-  --bg-color: #1F1F1F;
+  --bg-color: #0f0f0f;
   --primary-color: #ffffff;
   --secondary-color: #3A86DF;
 }
@@ -57,14 +57,7 @@ button {
   font-family: inherit;
   background-color: var(--text-color);
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-  background-color: var(--primary-color);
-  color: var(--secondary-color);
-  font-weight: 500;
+  transition: --border-color 0.25s;
 }
 @media (prefers-color-scheme: light) {
   :root {
