--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -1,8 +1,5 @@
 .wrapper {
   position:relative;
-  background: url("/images/backgroundimage.webp"), rgba(211, 211, 211, 0) 50% / cover no-repeat ;
-  background-repeat: no-repeat;
-  background-size: cover;
   width: 100%;
   height: 920px;
   top: 0;
@@ -32,12 +29,12 @@
   text-decoration: underline;
 }
 .section {
-  display: inline-block;
-  align-content: center;
-  align-items: center;
+  display: flex;
+  text-align: center;
   position: absolute;
-  top: 33%;
-  left: 15%;
+  top: 33%; 
+  width: 100%;
+  justify-content: center;
   font-size: 1.5em;
   font-family:"Inter";
 }
@@ -81,7 +78,6 @@
 @media screen and (max-width: 1200px) {
   .section{
       top: 38%;
-      left: 20%
   }
   .header{
     width: 70%;
