--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -35,7 +35,7 @@
   display: flex;
   text-align: center;
   position: absolute;
-  top: 40%;
+  top: 45%;
   transform: translateY(-50%); 
   width: 100%;
   justify-content: center;
@@ -155,6 +155,7 @@
 @media screen and (max-width: 550px) {
 
   .stacks{
+    margin-top: 1em;
     display: block;
   }
   .logo {
@@ -165,7 +166,7 @@
     overflow-x: hidden;
   }
   .section{
-    top: 50%;
+    top: 40%;
     transform: translateY(-50%);
     text-align: center;
   }
